# PDF-Data-Extraction

./: .gitignore  .pdm-python  pdf_parsing.py  pyproject.toml
