[project]
name = "pdf-extraction"
version = "0.0.1"
description = "Sample code demonstrating the use of PDF extraction capabilities of different libraries"
authors = [
    {name = "Achilleas Voutsas", email = "avoutsas@gmail.com"},
]
dependencies = [
    "PyPDF4>=1.27.0",
    "fitz>=0.0.1.dev2",
    "pdfminer.six>=20221105",
    "tabula-py>=2.6.0",
    "pypdf>=3.9.0",
    "pymupdf>=1.22.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "wheel>=0.40.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.23.1",
]
